--- a/XslTrans/samples/save/SampleRequest.html
+++ b/XslTrans/samples/save/SampleRequest.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "html">
+<!DOCTYPE html PUBLIC "html">
 <html lang="ru">
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -65,36 +65,44 @@
       <h2>Акты гражданского состояния</h2>
       <table class="items" width="100%">
         <col width="20%">
-        <col width="15%">
         <col width="20%">
+        <col width="15%">
         <col width="10%">
-        <col width="20%">
         <col width="15%">
+        <col width="20%">
         <tbody>
           <tr>
             <th>Дата рождения</th>
-            <td>01.01.1960</td>
+            <td>01.01.1960
+                                    Пр. 1</td>
+            <th></th>
+            <td></td>
+            <th></th>
+            <td></td>
           </tr>
           <tr>
             <th>Дата смерти</th>
-            <td>01.08.2022</td>
-            <th>Номер записи</th>
-            <td>000006</td>
+            <td>01.08.2022
+                                    Пр. 1</td>
             <th>Дата записи</th>
             <td>02.08.2022</td>
+            <th>Номер записи</th>
+            <td>000006</td>
           </tr>
-        </tbody>
-      </table><br><table class="items" width="100%">
-        <col width="20%">
-        <col width="80%">
-        <tbody>
+          <tr>
+            <td colspan="6"><br></td>
+          </tr>
           <tr>
             <th>Наименование ЗАГС</th>
-            <td>Гдетотакой отдел ЗАГС</td>
+            <td colspan="5">Гдетотакой отдел ЗАГС</td>
           </tr>
           <tr>
             <th>Код ЗАГС</th>
             <td>6800</td>
+            <th>Дата снятия</th>
+            <td>03.08.2022</td>
+            <th></th>
+            <td></td>
           </tr>
         </tbody>
       </table>
