--- a/XslTrans/samples/save/SampleRequest.html
+++ b/XslTrans/samples/save/SampleRequest.html
@@ -4,24 +4,11 @@
     <META http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>313-19</title>
-    <style type="text/css">
-                    body { margin: 10pt; font-size:11px; }
-                    h1 { margin: 10pt; font-weight: bold; font-size: 14pt; text-align: center; }
-                    h2 { background-color: #eee; font-weight: bold; font-size: 12pt; border-top: #000 1pt solid; padding: 2pt 2pt 2pt 10pt; }
-                    .rectangle { border: #000 1pt solid; margin-left: auto; margin-right: 0; padding: 2pt; width: 60%; }
-                    .items th { font-weight: bold; text-align: right; }
-                    .items td { padding-left: 10pt; }
-                    .accounts th { font-weight: normal; padding-left: 10pt; text-align: left; text-decoration: underline; }
-                    .accounts td { padding-left: 10pt; }
-                </style>
-    <style type="text/css" media="print">
-                    body { margin: 0; }
-                </style>
+    <style type="text/css">body{margin:10pt;font-size:11px;}h1{margin:10pt;font-weight:bold;font-size:14pt;text-align:center;}h2{background-color:#eee;font-weight:bold;font-size:12pt;border-top:#000 1pt solid;padding:2pt 2pt 2pt 10pt;}.rectangle{border:#000 1pt solid;margin-left:auto;margin-right:0;padding:2pt;width:60%;}.items th{font-weight:bold;text-align:right;}.items td{padding-left:10pt;}.accounts th{font-weight:normal;padding-left:10pt;text-align:left;text-decoration:underline;}.accounts td{padding-left:10pt;}</style>
+    <style type="text/css" media="print">body{margin:0;}</style>
   </head>
   <body>
-    <h1>СВЕДЕНИЯ В КРЕДИТНЫЕ ОРГАНИЗАЦИИ О СНЯТИИ С УЧЕТА В<br>
-                    НАЛОГОВОМ ОРГАНЕ ФИЗИЧЕСКОГО ЛИЦА - ВЛАДЕЛЬЦА СЧЕТА<br>
-                    НА ОСНОВАНИИ СВЕДЕНИЙ О СМЕРТИ</h1>
+    <h1>СВЕДЕНИЯ В КРЕДИТНЫЕ ОРГАНИЗАЦИИ О СНЯТИИ С УЧЕТА В<br>НАЛОГОВОМ ОРГАНЕ ФИЗИЧЕСКОГО ЛИЦА - ВЛАДЕЛЬЦА СЧЕТА<br>НА ОСНОВАНИИ СВЕДЕНИЙ О СМЕРТИ</h1>
     <div class="rectangle">
       <table class="items" width="100%">
         <tbody>
@@ -73,8 +60,7 @@
         <tbody>
           <tr>
             <th>Дата рождения</th>
-            <td>01.01.1960
-                                    Пр. 1</td>
+            <td>01.01.1960Пр. 1</td>
             <th></th>
             <td></td>
             <th></th>
@@ -82,8 +68,7 @@
           </tr>
           <tr>
             <th>Дата смерти</th>
-            <td>01.08.2022
-                                    Пр. 1</td>
+            <td>01.08.2022Пр. 1</td>
             <th>Дата записи</th>
             <td>02.08.2022</td>
             <th>Номер записи</th>
